Update on connection limits, adding async connection, adding sanitizeQuery for regex query
