# api/swagger.json
@@ -2,7 +2,7 @@
   "openapi": "3.0.3",
   "info": {
     "description": "This is a MongoDB Backend reflector server. Supporting front-end only application to deploy their own backend via PAAS platform to transmit their database data.",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "title": "Mongo Reflector",
     "license": {
       "name": "Apache 2.0",
@@ -11,7 +11,9 @@
   },
   "servers": [
     {
-      "url": ["https://node-js-mongo-reflector.vercel.app", "https://nodejs-mongoreflector.onrender.com/"]
+      "url": [
+        "https://mongoreflector-testing.onrender.com/"
+      ]
     }
   ],
   "tags": [
@@ -24,129 +26,195 @@
       "description": "POST requests are actural method that user needs for sending requests."
     }
   ],
-  "paths": {
-    "/find": {
-      "post": {
-        "tags": [
-          "Requests"
+"components": {
+    "schemas": {
+      "MongoBaseRequest": {
+        "type": "object",
+        "required": [
+          "mongoURI",
+          "dbName",
+          "collectionName"
         ],
-        "summary": "Find data from MongoDB",
+        "properties": {
+          "mongoURI": {
+            "type": "string",
+            "description": "MongoDB connection string (Atlas URI). / MongoDB 连接字符串 (Atlas 地址)。",
+            "example": "mongodb+srv://user:pass@cluster.mongodb.net"
+          },
+          "dbName": {
+            "type": "string",
+            "description": "Target database name. / 目标数据库名称。",
+            "example": "production_db"
+          },
+          "collectionName": {
+            "type": "string",
+            "description": "Target collection name. / 目标集合名称。",
+            "example": "orders"
+          }
+        }
+      }
+    }
+  },
+  "paths": {
+    "/ping": {
+      "post": {
+        "summary": "Test Connection / 测试连接",
+        "description": "Verify if the provided URI can connect to the database. / 验证提供的 URI 是否能成功连接数据库。",
         "requestBody": {
           "required": true,
           "content": {
             "application/json": {
               "schema": {
-                "type": "object",
-                "properties": {
-                  "mongoURI": {
-                    "type": "string",
-                    "description": "MongoDB connection string",
-                    "example": "mongodb://localhost:27017"
-                  },
-                  "dbName": {
-                    "type": "string",
-                    "description": "Name of the database",
-                    "example": "testDB"
-                  },
-                  "collectionName": {
-                    "type": "string",
-                    "description": "Name of the collection",
-                    "example": "testCollection"
-                  },
-                  "query": {
-                    "type": "object",
-                    "description": "MongoDB query object",
-                    "example": {
-                      "field": "value"
-                    }
-                  },
-                  "page": {
-                    "type": "integer",
-                    "description": "Page number for pagination",
-                    "example": 1
-                  },
-                  "pageSize": {
-                    "type": "integer",
-                    "description": "Number of records per page",
-                    "example": 10
-                  }
-                }
+                "$ref": "#/components/schemas/MongoBaseRequest"
               }
             }
           }
         },
         "responses": {
           "200": {
-            "description": "Success",
+            "description": "Success / 成功",
+            "content": {
+              "application/json": {
+                "example": {
+                  "acknowledged": true,
+                  "message": "ping successful"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/find": {
+      "post": {
+        "summary": "General Query / 通用查询",
+        "description": "Fetch data based on query object. Supports RegExp(pattern, flags). / 根据查询对象获取数据。支持正则字符串转换。",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "allOf": [
+                  {
+                    "$ref": "#/components/schemas/MongoBaseRequest"
+                  },
+                  {
+                    "type": "object",
+                    "properties": {
+                      "query": {
+                        "type": "object",
+                        "description": "MongoDB Filter object. / MongoDB 过滤对象。",
+                        "example": {
+                          "status": "A",
+                          "tags": "RegExp(cloud, i)"
+                        }
+                      },
+                      "options": {
+                        "type": "object",
+                        "description": "Projection, sort, etc. / 投影、排序等选项。",
+                        "example": {
+                          "sort": {
+                            "date": -1
+                          }
+                        }
+                      }
+                    }
+                  }
+                ]
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Results found / 返回查询结果",
             "content": {
               "application/json": {
                 "schema": {
                   "type": "object",
                   "properties": {
+                    "acknowledged": {
+                      "type": "boolean"
+                    },
+                    "results": {
+                      "type": "array",
+                      "items": {
+                        "type": "object"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/paginatefind": {
+      "post": {
+        "summary": "DataTables Pagination / 分页查询",
+        "description": "Advanced pagination compatible with DataTables frontend plugin. / 适配 DataTables 前端插件的高级分页查询。",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "allOf": [
+                  {
+                    "$ref": "#/components/schemas/MongoBaseRequest"
+                  },
+                  {
+                    "type": "object",
+                    "properties": {
+                      "draw": {
+                        "type": "integer"
+                      },
+                      "start": {
+                        "type": "integer",
+                        "description": "Skip count. / 跳过的记录数。"
+                      },
+                      "length": {
+                        "type": "integer",
+                        "description": "Page size. / 每页长度。"
+                      },
+                      "search": {
+                        "type": "object",
+                        "properties": {
+                          "value": {
+                            "type": "string"
+                          }
+                        }
+                      }
+                    }
+                  }
+                ]
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Paginated Data / 分页数据",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "draw": {
+                      "type": "integer"
+                    },
+                    "recordsTotal": {
+                      "type": "integer"
+                    },
+                    "recordsFiltered": {
+                      "type": "integer"
+                    },
                     "data": {
                       "type": "array",
                       "items": {
                         "type": "object"
                       }
-                    },
-                    "meta": {
-                      "type": "object",
-                      "properties": {
-                        "totalRecords": {
-                          "type": "integer",
-                          "description": "Total number of matching records"
-                        },
-                        "currentPage": {
-                          "type": "integer",
-                          "description": "Current page number"
-                        },
-                        "pageSize": {
-                          "type": "integer",
-                          "description": "Number of records per page"
-                        },
-                        "totalPages": {
-                          "type": "integer",
-                          "description": "Total number of pages"
-                        }
-                      }
                     }
-                  }
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad request"
-          },
-          "500": {
-            "description": "Server error"
-          }
-        }
-      },
-      "get": {
-        "tags": [
-          "Samples"
-        ],
-        "summary": "Example request to find data from MongoDB",
-        "description": "Returns an example JSON body showing how to use the /find endpoint",
-        "responses": {
-          "200": {
-            "description": "Example request for /find",
-            "content": {
-              "application/json": {
-                "example": {
-                  "description": "Find data example",
-                  "method": "POST",
-                  "url": "/find",
-                  "requestBody": {
-                    "mongoURI": "mongodb://localhost:27017",
-                    "dbName": "testDB",
-                    "collectionName": "testCollection",
-                    "query": {
-                      "field": "value"
-                    },
-                    "page": 1,
-                    "pageSize": 10
                   }
                 }
               }
@@ -155,233 +223,49 @@
         }
       }
     },
-    "/update": {
+    "/distinct_field": {
       "post": {
-        "tags": [
-          "Requests"
-        ],
-        "summary": "Update data in MongoDB",
+        "summary": "Distinct Values / 唯一值查询",
+        "description": "Get all unique values of a specific field. / 获取指定字段的所有唯一值。",
         "requestBody": {
           "required": true,
           "content": {
             "application/json": {
               "schema": {
-                "type": "object",
-                "properties": {
-                  "mongoURI": {
-                    "type": "string",
-                    "description": "MongoDB connection string",
-                    "example": "mongodb://localhost:27017"
+                "allOf": [
+                  {
+                    "$ref": "#/components/schemas/MongoBaseRequest"
                   },
-                  "dbName": {
-                    "type": "string",
-                    "description": "Name of the database",
-                    "example": "testDB"
-                  },
-                  "collectionName": {
-                    "type": "string",
-                    "description": "Name of the collection",
-                    "example": "testCollection"
-                  },
-                  "query": {
+                  {
                     "type": "object",
-                    "description": "MongoDB query object",
-                    "example": {
-                      "field": "value"
-                    }
-                  },
-                  "update": {
-                    "type": "object",
-                    "description": "MongoDB update object",
-                    "example": {
-                      "$set": {
-                        "fieldToUpdate": "newValue"
+                    "required": [
+                      "field_name"
+                    ],
+                    "properties": {
+                      "field_name": {
+                        "type": "string",
+                        "description": "Field to perform distinct on. / 要执行去重的字段名。",
+                        "example": "user_role"
                       }
                     }
-                  },
-                  "upsert": {
-                    "type": "boolean",
-                    "description": "Whether to insert a new document if no match is found",
-                    "example": false
-                  },
-                  "multi": {
-                    "type": "boolean",
-                    "description": "Whether to update multiple documents",
-                    "example": false
                   }
-                }
+                ]
               }
             }
           }
         },
         "responses": {
           "200": {
-            "description": "Update operation successful",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "matchedCount": {
-                      "type": "integer",
-                      "description": "Number of matched documents"
-                    },
-                    "modifiedCount": {
-                      "type": "integer",
-                      "description": "Number of modified documents"
-                    },
-                    "upsertedCount": {
-                      "type": "integer",
-                      "description": "Number of upserted documents"
-                    },
-                    "upsertedId": {
-                      "type": "string",
-                      "description": "ID of the upserted document"
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad request"
-          },
-          "500": {
-            "description": "Server error"
-          }
-        }
-      },
-      "get": {
-        "tags": [
-          "Samples"
-        ],
-        "summary": "Example request to update data in MongoDB",
-        "description": "Returns an example JSON body showing how to use the /update endpoint",
-        "responses": {
-          "200": {
-            "description": "Example request for /update",
+            "description": "Unique list / 唯一值列表",
             "content": {
               "application/json": {
                 "example": {
-                  "description": "Update data example",
-                  "method": "POST",
-                  "url": "/update",
-                  "requestBody": {
-                    "mongoURI": "mongodb://localhost:27017",
-                    "dbName": "testDB",
-                    "collectionName": "testCollection",
-                    "query": {
-                      "field": "value"
-                    },
-                    "update": {
-                      "$set": {
-                        "fieldToUpdate": "newValue"
-                      }
-                    },
-                    "upsert": true,
-                    "multi": false
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/delete": {
-      "post": {
-        "tags": [
-          "Requests"
-        ],
-        "summary": "Delete data from MongoDB",
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "mongoURI": {
-                    "type": "string",
-                    "description": "MongoDB connection string",
-                    "example": "mongodb://localhost:27017"
-                  },
-                  "dbName": {
-                    "type": "string",
-                    "description": "Name of the database",
-                    "example": "testDB"
-                  },
-                  "collectionName": {
-                    "type": "string",
-                    "description": "Name of the collection",
-                    "example": "testCollection"
-                  },
-                  "query": {
-                    "type": "object",
-                    "description": "MongoDB query object to match documents for deletion",
-                    "example": {
-                      "field": "value"
-                    }
-                  },
-                  "multi": {
-                    "type": "boolean",
-                    "description": "Whether to delete multiple documents",
-                    "example": false
-                  }
-                }
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "Delete operation successful",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "deletedCount": {
-                      "type": "integer",
-                      "description": "Number of deleted documents"
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad request"
-          },
-          "500": {
-            "description": "Server error"
-          }
-        }
-      },
-      "get": {
-        "tags": [
-          "Samples"
-        ],
-        "summary": "Example request to delete data in MongoDB",
-        "description": "Returns an example JSON body showing how to use the /delete endpoint",
-        "responses": {
-          "200": {
-            "description": "Example request for /delete",
-            "content": {
-              "application/json": {
-                "example": {
-                  "description": "Delete data example",
-                  "method": "POST",
-                  "url": "/delete",
-                  "requestBody": {
-                    "mongoURI": "mongodb://localhost:27017",
-                    "dbName": "testDB",
-                    "collectionName": "testCollection",
-                    "query": {
-                      "field": "value"
-                    },
-                    "multi": false
-                  }
+                  "acknowledged": true,
+                  "results": [
+                    "Admin",
+                    "Editor",
+                    "User"
+                  ]
                 }
               }
             }
